--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@ttskch/select2-bootstrap4-theme": "^1.5.2",
         "admin-lte": "^3.2.0",
         "bootstrap": "^4.6.2",
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "select2": "^4.1.0-rc.0"
     }
 }
