--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@coreui/coreui": "^5.4.1",
+        "@coreui/icons": "^3.0.1",
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@popperjs/core": "^2.11.8",
         "@ttskch/select2-bootstrap4-theme": "^1.5.2",
-        "admin-lte": "^3.2.0",
-        "bootstrap": "^4.6.2",
+        "bootstrap": "^5.3.7",
+        "datatables.net-bs5": "^2.3.2",
         "jquery": "^3.7.1",
         "select2": "^4.1.0-rc.0"
     }
